improve controller performance